@@ -8,7 +8,6 @@ Lib:
 Client:
 * Mempool: Limit the size of WaitingForInput txs - see LimitOrphanTxSize()
 * Force to create UTXO.db file once for awhile (when bootstraping)
-* While syncing up the chain, consider storing pending blocks on disk (insted or RAM)
 * Review and update WebUI's Help page
 * Monitor: at slow connections it gets stuck (new blocks stop being downloaded). Go to standby and come back.
 * Optionally use utils.GetBlockFromWeb() for initial blockchain download
