@@ -22,8 +22,9 @@ NOTE: Use older wallet version (e.g. 1.9.3) if you had wallet type 2 or 4 alread
 * WebUI/Home: Show the fee chart when clicked on a block's dot
 * "lib/qdb" package moved to "lib/others/qdb"
 * Client/TextUI: New command "txmpload" to load new transactions from "mempool.dmp" file (created by "txmpsave")
-* Support for keeping blocks database in smaller files (for easy purging) - see "CFG.BlockDB.MaxDataFileMB"
+* Support for keeping blocks database in smaller files (for easy purging) - see "CFG.Memory.MaxDataFileMB"
 * Do not build block's OldData / NoWitnessData when not needed
+* client: new config value "Memory.CacheOnDisk" to store blocks on disk (instead of RAM) during initial chain sync
 
 1.9.3 - 2017-12-26
 * Client: Removed a rare deadlock that could happen in network.AddB2G() on Mutex_net.Lock()
